--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -16,6 +16,11 @@
   font-size: 1.5rem;
   line-height: 2rem;
   font-weight: $font-bold;
+
+  @include tablet {
+    font-size: 2.0625rem;
+    line-height: 2.75rem;
+  }
 }
 
 @mixin section-header {
@@ -25,12 +30,24 @@
   font-size: 0.82rem;
   line-height: 1.125rem;
   font-weight: $font-bold;
+
+  @include tablet {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+  }
 }
 
 @mixin body-text {
   font-size: 0.82rem;
   line-height: 1.125rem;
+
+  @include tablet {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+  }
 }
 
 @mixin label-styles {
+  font-size: 0.75rem;
+  line-height: 1.25rem;
 }
