--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -18,4 +18,4 @@ $font-demi: 500;
 $tablet-breakpoint: 768px;
 $desktop-breakpoint: 1280px;
 
-$divider: solid 1.5px $mercury;
+$divider: solid 1px $mercury;
